--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "InTouch",
   "short_name": "InTouch",
   "start_url": "./index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#fefefe",
   "theme_color": "#a3c9f9",
   "icons": [
